--- a/wrn-angular/app/styles/main.css
+++ b/wrn-angular/app/styles/main.css
@@ -6832,9 +6832,10 @@ body {
 */
   font-family: Monofett;
   color: #222222 !important;
-  font-size: 50px;
-  line-height: 33px;
-  padding: 20px 35px;
+  font-size: 42px;
+  text-align: right;
+  line-height: 28px;
+  padding: 10px 35px;
 }
 /* entry list and stats table */
 .main.list-group .progress {
