--- a/wrn-angular/app/styles/main.less
+++ b/wrn-angular/app/styles/main.less
@@ -94,9 +94,10 @@ body {
 */
   font-family: Monofett; 
   color: @gray-darker !important; 
-  font-size: 50px;
-  line-height: 33px;
-  padding: 20px 35px;
+  font-size: 42px;
+  text-align: right;
+  line-height: 28px;
+  padding: 10px 35px;
 }
 
 /* entry list and stats table */
