--- a/wrn-angular/app/views/login.html
+++ b/wrn-angular/app/views/login.html
@@ -1,3 +1,4 @@
+<div class="container col-md-4 col-md-offset-4">
 <form nonvalidate ng-submit="user.login()">
   <p>
     <label>Email</label>
@@ -11,3 +12,4 @@
     <input type="submit" value="Login" class='btn btn-primary'>
   </p>
 </form>
+</div>
