--- a/wrn-angular/app/views/register.html
+++ b/wrn-angular/app/views/register.html
@@ -1,3 +1,4 @@
+<div class="container col-md-4 col-md-offset-4">
 <form nonvalidate ng-submit="user.register()">
   <p>
     <label>Email</label>
@@ -23,3 +24,4 @@
     <input type="submit" value="Register" class='btn btn-primary'>
   </p>
 </form>
+</div>
